Bootstrap added. Header and footer updated. Some page contents created. Internationalization texts updated.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -1,5 +1,17 @@
+header.nav.button.login = Einloggen
+
 index.welcome = Willkommen zum University News Ulm Web Client!
+index.text.app = Die University News Ulm App ist verfügbar für Android and Windows Phone.
+index.text.app.android = Lade die Android App vom Google Play Store.
+index.button.app.android = Android App herunterladen
+index.text.app.windowsPhone = Lade die Windows Phone App vom Windows Store.
+index.button.app.windowsPhone = Windows Phone App herunterladen
 
 moderators.label.name = Name
 moderators.label.firstName = Vorname
 moderators.label.lastName = Nachname
+
+login.label.heading = Bitte einloggen
+login.label.email = E-Mail-Adresse
+login.label.password = Passwort
+login.button.login = Einloggen
