Added login functionality in ModeratorAPI. Fixed Bug getErrorStream in MainAPI. Added controller stuff: The FrontController, the RequestContextManager, Actions and the ActionFactory and a RequestDispatcher. Several actions like GetMyChannelsAction, HomeAction, LoadLoginAction, LoginAction. However, not all of them are properly implemented. Added ServerError data class to be able to handle error responses from REST server. Added exceptions APIException und SessionIsExpiredException. Added some new constants, Added the start up listener which is used to initialize the ActionFactory and the Dispatcher. Moved all jsp files to WEB-INF folder. This is considered good practice.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -6,12 +6,13 @@ index.text.app.android = Lade die Android App vom Google Play Store.
 index.button.app.android = Android App herunterladen
 index.text.app.windowsPhone = Lade die Windows Phone App vom Windows Store.
 index.button.app.windowsPhone = Windows Phone App herunterladen
+index.text.loggedin = Sie sind eingeloggt als:
 
 moderators.label.name = Name
 moderators.label.firstName = Vorname
 moderators.label.lastName = Nachname
 
 login.label.heading = Bitte einloggen
-login.label.email = E-Mail-Adresse
+login.label.username = Nutzername
 login.label.password = Passwort
 login.button.login = Einloggen
