setAuthorization Methode geändert in MainAPI. getModerators Methode angepasst in ModeratorAPI. invalidateSession Methode angeboten in RequestContextManager. Neu hinzugekommene Einträge in RequestDispatcher und ActionFactory eingetragen. Javadoc Kommentar geändert in Action Interface. Neu hinzugekommen sind: DisplayModeratorsAction und LogoutAction. Login/Logout sollte nun funktionieren. Ebenso die Anzeige der Moderatoren (ist jedoch Admin only wie ich festgestellt habe). Anpassungen in anderen Actions nicht relevant (meist nur Kommentare). ModeratorServlet gelöscht. Filter eingebaut, um Caching auf Seiten des Browsers zu verhindern. Header.jsp angepasst.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -1,4 +1,5 @@
 header.nav.button.login = Einloggen
+header.nav.button.logout = Ausloggen
 
 index.welcome = Willkommen zum University News Ulm Web Client!
 index.text.app = Die University News Ulm App ist verfügbar für Android and Windows Phone.
