Translator added (retrieve internationalized Strings from servlets)

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -17,3 +17,4 @@ login.label.heading = Bitte einloggen
 login.label.username = Nutzername
 login.label.password = Passwort
 login.button.login = Einloggen
+login.message.failed = Der Nutzername oder das Passwort ist falsch.
