--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -7,7 +7,7 @@ index.text.app.android = Lade die Android App vom Google Play Store.
 index.button.app.android = Android App herunterladen
 index.text.app.windowsPhone = Lade die Windows Phone App vom Windows Store.
 index.button.app.windowsPhone = Windows Phone App herunterladen
-index.text.loggedin = Sie sind eingeloggt als:
+index.text.loggedIn = Sie sind eingeloggt als:
 
 moderators.label.name = Name
 moderators.label.firstName = Vorname
@@ -17,4 +17,8 @@ login.label.heading = Bitte einloggen
 login.label.username = Nutzername
 login.label.password = Passwort
 login.button.login = Einloggen
-login.message.failed = Der Nutzername oder das Passwort ist falsch.
+login.message.error.credentials = Der Nutzername oder das Passwort ist falsch.
+login.message.error.locked = Der Account wurde noch nicht freigegeben.
+login.message.error.deleted = Der Account existiert nicht mehr.
+
+general.message.error.failed = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
