Header and footer added to error pages. Header updated.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -21,4 +21,6 @@ login.message.error.credentials = Der Nutzername oder das Passwort ist falsch.
 login.message.error.locked = Der Account wurde noch nicht freigegeben.
 login.message.error.deleted = Der Account existiert nicht mehr.
 
-general.message.error.failed = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
+general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
+general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
+general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
