Added API Exception throwing in ModeratorAPI. Fixed problem of language setting getting lost in login process by changing createNewSession method in RequestContextManager. Fixed bug in dispatcher which enabled two perform two forwards subsequently. Added special case LoginRequired in Dispatcher. Added throws ServerException in Actions. Adjustments in error handling in FrontController.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -21,6 +21,9 @@ login.message.error.credentials = Der Nutzername oder das Passwort ist falsch.
 login.message.error.locked = Der Account wurde noch nicht freigegeben.
 login.message.error.deleted = Der Account existiert nicht mehr.
 
-general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
+general.message.error.failed = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
+general.message.error.sessionExpired = Deine Session ist aufgrund langer Inaktivität abgelaufen. Bitte melde dich neu\
+   an.
+general.message.error.requiresLogin = Du must dich anmelden, um die gewünschte Funktionalität ausführen zu können.general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
