Header and texts updated. Navigation changes after login.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -1,5 +1,9 @@
 header.nav.button.login = Einloggen
 header.nav.button.logout = Ausloggen
+header.nav.label.accounts = Systemaccounts
+header.nav.label.applications = Anträge
+header.nav.label.myChannels = Meine Kanäle
+header.nav.label.admin = Administrator
 
 index.welcome = Willkommen zum University News Ulm Web Client!
 index.text.app = Die University News Ulm App ist verfügbar für Android and Windows Phone.
