Added register page. Added action for GET request on register page. Added button to navigate to register page in login page. Designed register page. However, functionality for the registration process itself is still missing.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -24,10 +24,37 @@ login.button.login = Einloggen
 login.message.error.credentials = Der Nutzername oder das Passwort ist falsch.
 login.message.error.locked = Der Account wurde noch nicht freigegeben.
 login.message.error.deleted = Der Account existiert nicht mehr.
+login.noaccount.heading = Kein Account?
+login.noaccount.description = Wollen Sie einen Moderatorenaccount für University News beantragen?
+login.noaccount.button.label = Registrierung
+
+register.heading = Erstelle Moderatorenaccount
+register.description = Bitte geben Sie die erforderlichen Daten für die Erstellung des Moderatorenaccounts an. Nach \
+  dem Senden der Daten wird der Antrag zur Überprüfung gegeben. Das Motivationsfeld ist für eine Beschreibung der \
+  Gründe, aus denen Sie den Account anlegen wollen. Eine gute Motivation steigert die Chance eines erfolgreichen \
+  Accountantrags. Sie werden über den Status des Antrags per Email informiert. Sobald Ihr Account-Antrag angenommen \
+  wurde können Sie University News als Moderator nutzen.
+register.form.label.name = Nutzername
+register.form.label.name.desc = Nutzernamen eingeben
+register.form.label.firstname = Vorname
+register.form.label.firstname.desc = Vornamen eingeben
+register.form.label.lastname = Nachname
+register.form.label.lastname.desc = Nachnamen eingeben
+register.form.label.email = Email
+register.form.label.email.desc = Email eingeben
+register.form.label.password = Passwort
+register.form.label.password.desc = 1234
+register.form.label.reenterpassword = Passwort bestätigen
+register.form.label.reenterpassword.desc = 5678
+register.form.label.motivation = Motivation
+register.form.label.motivation.desc = Motivation eingeben
+register.form.button = Sende Accountantrag
+
 
 general.message.error.failed = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.sessionExpired = Deine Session ist aufgrund langer Inaktivität abgelaufen. Bitte melde dich neu\
    an.
-general.message.error.requiresLogin = Du must dich anmelden, um die gewünschte Funktionalität ausführen zu können.general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
+general.message.error.requiresLogin = Du must dich anmelden, um die gewünschte Funktionalität ausführen zu können.
+general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
