Added post register functionality. Added entry to RequestDispatcher. Performed registration of action in ActionFactory. Added RegisterAction class and implemented validation logic. Modified register.jsp to support validation errors and parameter transfer across several requests that fail with validation errors.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -43,9 +43,9 @@ register.form.label.lastname.desc = Nachnamen eingeben
 register.form.label.email = Email
 register.form.label.email.desc = Email eingeben
 register.form.label.password = Passwort
-register.form.label.password.desc = 1234
+register.form.label.password.desc = Passwort eingeben
 register.form.label.reenterpassword = Passwort bestätigen
-register.form.label.reenterpassword.desc = 5678
+register.form.label.reenterpassword.desc = Passwort erneut eingeben
 register.form.label.motivation = Motivation
 register.form.label.motivation.desc = Motivation eingeben
 register.form.button = Sende Accountantrag
