German texts updated.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -52,9 +52,9 @@ register.form.button = Sende Accountantrag
 
 
 general.message.error.failed = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
-general.message.error.sessionExpired = Deine Session ist aufgrund langer Inaktivität abgelaufen. Bitte melde dich neu\
-   an.
-general.message.error.requiresLogin = Du must dich anmelden, um die gewünschte Funktionalität ausführen zu können.
+general.message.error.sessionExpired = Ihre Session ist aufgrund langer Inaktivität abgelaufen. Bitte melden Sie sich \
+  neu an.
+general.message.error.requiresLogin = Sie müssen sich anmelden, um die gewünschte Funktionalität ausführen zu können.
 general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
