Fixed >= Bug in getErrorResponse in API. Status can now also be 400. Added sendCreateAccountRequest method to ModeratorAPI. Added register entries /register to RequestDispatcher. Added checks to prevent problems when URL path contains .jsp and parameter information. Same is done in ActionFactory where .jsp and parameter info could also result in problems. Added validationMessages in RegisterAction. Added request execution to server and handling of potential APIExceptions. Added hashing method. Added validation messages in register.jsp

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -28,6 +28,7 @@ login.noaccount.heading = Kein Account?
 login.noaccount.description = Wollen Sie einen Moderatorenaccount für University News beantragen?
 login.noaccount.button.label = Registrierung
 
+register.info.success = Account erfolgreich angelegt.
 register.heading = Erstelle Moderatorenaccount
 register.description = Bitte geben Sie die erforderlichen Daten für die Erstellung des Moderatorenaccounts an. Nach \
   dem Senden der Daten wird der Antrag zur Überprüfung gegeben. Das Motivationsfeld ist für eine Beschreibung der \
@@ -49,6 +50,28 @@ register.form.label.reenterpassword.desc = Passwort erneut eingeben
 register.form.label.motivation = Motivation
 register.form.label.motivation.desc = Motivation eingeben
 register.form.button = Sende Accountantrag
+register.form.validationError.invalidName = Der eingegebene Nutzername ist nicht valide. Bitte stellen Sie sicher, \
+  dass Ihr Nutzername mindestens 3 Zeichen und maximal 35 Zeichen lang ist. Der Nutzername darf keine Sonderzeichen \
+  enthalten.
+register.form.validationError.missingName = Bitte geben Sie einen Nutzernamen an.
+register.form.validationError.nameAlreadyExists = Der Nutzername existiert bereits im System. Namen von Moderatoren \
+  sollten eindeutig sein. Wir bitten Sie deshalb einen anderen Nutzernamen zu wählen.
+register.form.validationError.invalidFirstName = Der eingegebene Vorname ist zu lang. Bitte stellen Sie sicher, dass \
+  der Name nicht mehr als 45 Zeichen umfasst.
+register.form.validationError.missingFirstName = Bitte geben Sie Ihren Vornamen an.
+register.form.validationError.invalidLastName = Der eingegebene Nachname ist zu lang. Bitte stellen Sie sicher, dass \
+  der Nachname nicht mehr als 45 Zeichen umfasst.
+register.form.validationError.missingLastName = Bitte geben Sie Ihren Nachnamen an.
+register.form.validationError.invalidEmail = Die eingegebene Email Adresse ist nicht gültig.
+register.form.validationError.missingEmail = Bitte geben Sie Ihre Email Adresse an. Diese wird benötigt für den \
+  Accountantrag.
+register.form.validationError.missingPassword = Bitte geben Sie ein Passwort für Ihren Account an.
+register.form.validationError.passwordMismatch = Die eingegebenen Passwörter in beiden Textfeldern stimmen nicht \
+  überein.
+register.form.validationError.invalidMotivation = Die eingegebene Motivation ist zu lang. Bitte stellen Sie sicher, \
+  dass Ihre Eingabe nicht mehr als 300 Zeichen umfasst.
+register.form.validationError.missingMotivation = Bitte geben Sie Ihre Motivation an.
+register.form.validationError.general.rejected = Abgelehnt vom Server. Bitte prüfen Sie Ihre Eingabe nochmals.
 
 
 general.message.error.failed = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
@@ -58,3 +81,4 @@ general.message.error.requiresLogin = Sie müssen sich anmelden, um die gewünscht
 general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
+general.alert.success = Erfolg!
