Implementation of moderator applications page started. Navigation updated. Footer disabled. Texts updated.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -4,6 +4,11 @@ header.nav.label.accounts = Systemaccounts
 header.nav.label.applications = Anträge
 header.nav.label.myChannels = Meine Kanäle
 header.nav.label.admin = Administrator
+header.nav.label.admin.applications = Accountanträge
+header.nav.label.admin.accounts = Systemaccounts
+header.nav.label.admin.groups = Alle Gruppen
+header.nav.label.admin.channels = Alle Kanäle
+header.nav.label.myAccount = Mein Account
 
 index.welcome = Willkommen zum University News Ulm Web Client!
 index.text.app = Die University News Ulm App ist verfügbar für Android and Windows Phone.
@@ -12,10 +17,6 @@ index.button.app.android = Android App herunterladen
 index.text.app.windowsPhone = Lade die Windows Phone App vom Windows Store.
 index.button.app.windowsPhone = Windows Phone App herunterladen
 index.text.loggedIn = Sie sind eingeloggt als:
-
-moderators.label.name = Name
-moderators.label.firstName = Vorname
-moderators.label.lastName = Nachname
 
 login.label.heading = Bitte einloggen
 login.label.username = Nutzername
@@ -34,20 +35,17 @@ register.description = Bitte geben Sie die erforderlichen Daten für die Erstellu
   dem Senden der Daten wird der Antrag zur Überprüfung gegeben. Das Motivationsfeld ist für eine Beschreibung der \
   Gründe, aus denen Sie den Account anlegen wollen. Eine gute Motivation steigert die Chance eines erfolgreichen \
   Accountantrags. Sie werden über den Status des Antrags per Email informiert. Sobald Ihr Account-Antrag angenommen \
-  wurde können Sie University News als Moderator nutzen.
-register.form.label.name = Nutzername
+  wurde können Sie University News Ulm als Moderator nutzen.
 register.form.label.name.desc = Nutzernamen eingeben
-register.form.label.firstname = Vorname
+moderator.firstname = Vorname
 register.form.label.firstname.desc = Vornamen eingeben
-register.form.label.lastname = Nachname
+moderator.lastname = Nachname
 register.form.label.lastname.desc = Nachnamen eingeben
-register.form.label.email = Email
 register.form.label.email.desc = Email eingeben
 register.form.label.password = Passwort
 register.form.label.password.desc = Passwort eingeben
 register.form.label.reenterpassword = Passwort bestätigen
 register.form.label.reenterpassword.desc = Passwort erneut eingeben
-register.form.label.motivation = Motivation
 register.form.label.motivation.desc = Motivation eingeben
 register.form.button = Sende Accountantrag
 register.form.validationError.invalidName = Der eingegebene Nutzername ist nicht valide. Bitte stellen Sie sicher, \
@@ -81,4 +79,18 @@ general.message.error.requiresLogin = Sie müssen sich anmelden, um die gewünscht
 general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
+
+moderator.email = E-Mail
+moderator.name = Nutzername
+moderator.motivation = Motivation
+
+application.title = Accountanträge
+application.info = Auf dieser Seite sind alle offenen Accountanträge aufgelistet. Sie sind absteigend nach Nachnamen \
+  sortiert. Bitte überprüfen Sie die Anträge. Danach können Sie entscheiden, ob Sie die Anträge bestätigen oder \
+  ablehnen möchten.
+application.list.heading = Antragsteller
+application.accept = Annehmen
+application.decline = Ablehnen
+application.nodata = Keine Anträge gefunden
+application.nodata.info = Momentan gibt es keine offenen Accountanträge.general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
 general.alert.success = Erfolg!
