Moderator applications page finished. Load, accept (unlock) and decline (delete) moderator applications implemented. Author of all classes changed to both Matthias Mak and Philipp Speidel. Texts updated.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -71,7 +71,6 @@ register.form.validationError.invalidMotivation = Die eingegebene Motivation ist
 register.form.validationError.missingMotivation = Bitte geben Sie Ihre Motivation an.
 register.form.validationError.general.rejected = Abgelehnt vom Server. Bitte prüfen Sie Ihre Eingabe nochmals.
 
-
 general.message.error.failed = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.sessionExpired = Ihre Session ist aufgrund langer Inaktivität abgelaufen. Bitte melden Sie sich \
   neu an.
@@ -79,18 +78,22 @@ general.message.error.requiresLogin = Sie müssen sich anmelden, um die gewünscht
 general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
+general.alert.success = Erfolg!
 
 moderator.email = E-Mail
 moderator.name = Nutzername
 moderator.motivation = Motivation
+moderator.notfound = Die angegebene Moderator-Ressource konnte nicht gefunden werden.
 
 application.title = Accountanträge
 application.info = Auf dieser Seite sind alle offenen Accountanträge aufgelistet. Sie sind absteigend nach Nachnamen \
-  sortiert. Bitte überprüfen Sie die Anträge. Danach können Sie entscheiden, ob Sie die Anträge bestätigen oder \
+  sortiert. Bitte überprüfen Sie die Anträge. Danach können Sie entscheiden, ob Sie die Anträge annehmen oder \
   ablehnen möchten.
 application.list.heading = Antragsteller
 application.accept = Annehmen
 application.decline = Ablehnen
 application.nodata = Keine Anträge gefunden
-application.nodata.info = Momentan gibt es keine offenen Accountanträge.general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
-general.alert.success = Erfolg!
+application.nodata.info = Momentan gibt es keine offenen Accountanträge.
+application.none = Keine
+application.accept.success = Der Accountantrag von {0} wurde akzeptiert.
+application.decline.success = Der Accountantrag von {0} wurde abgelehnt.
