Added resetPassword method to ModeratorAPI. Added LoadPasswordResetAction and ResetPasswordAction implementations. Added page resetPassword and modified login page. Registered actions and pages in factory and dispatcher. However, functionality is not yet tested!

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -28,6 +28,16 @@ login.message.error.deleted = Der Account existiert nicht mehr.
 login.noaccount.heading = Kein Account?
 login.noaccount.description = Wollen Sie einen Moderatorenaccount für University News beantragen?
 login.noaccount.button.label = Registrierung
+login.passwordReset.description = Haben Sie Ihr Passwort vergessen?
+login.passwordReset.description.link = Passwort zurücksetzen
+
+resetPassword.heading = Passwort zurücksetzen
+resetPassword.description = Wenn Sie Ihr Passwort vergessen haben können Sie es hier zurücksetzen. Bitte geben Sie \
+  hierfür den Nutzernamen an, mit dem Sie beim System registriert sind. Das System wird Ihnen ein neues Passwort auf \
+  Ihre hinterlegte Mail-Adresse senden. Mit diesem Passwort können Sie sich beim System anmelden. Bitte ändern Sie \
+  das zurückgesetzte Passwort sobald wie möglich.
+resetPassword.resetButton.label = Passwort zurücksetzen
+resetPassword.failure.accountNotFound = Es ist kein Account diesem Nutzernamen zugeordnet.
 
 register.info.success = Account erfolgreich angelegt.
 register.heading = Erstelle Moderatorenaccount
