Implementation of accounts page started. Actions moved to actions package. Header updated: Register link added. Bootstrap confirmation library added. Texts for accounts page created.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -27,7 +27,7 @@ login.message.error.locked = Der Account wurde noch nicht freigegeben.
 login.message.error.deleted = Der Account existiert nicht mehr.
 login.noaccount.heading = Kein Account?
 login.noaccount.description = Wollen Sie einen Moderatorenaccount für University News beantragen?
-login.noaccount.button.label = Registrierung
+login.noaccount.button.label = Registrieren
 login.passwordReset.description = Haben Sie Ihr Passwort vergessen?
 login.passwordReset.description.link = Passwort zurücksetzen
 
@@ -107,3 +107,16 @@ application.nodata.info = Momentan gibt es keine offenen Accountanträge.
 application.none = Keine
 application.accept.success = Der Accountantrag von {0} wurde akzeptiert.
 application.decline.success = Der Accountantrag von {0} wurde abgelehnt.
+
+accounts.title = Systemaccounts
+accounts.info = Auf dieser Seite sind alle Moderatorenaccounts des Systems aufgelistet. Sie sind absteigend nach \
+  Nachnamen sortiert. Sie können einen Moderatorenaccount sperren oder löschen indem Sie auf den entsprechenden \
+  Button klicken.
+accounts.list.heading = Accounts
+accounts.lock= Sperren
+accounts.delete = Löschen
+accounts.nodata = Keine Accounts gefunden
+accounts.nodata.info = Es gibt keine Moderatorenaccounts im System.
+accounts.none = Keine
+accounts.lock.success = Der Account von {0} wurde gesperrt.
+accounts.delete.success = Der Account von {0} wurde gelöscht.
