Confirmation on delete added to accounts page. FrontController moved to correct package. Log4j logging path changed to ...WebClient

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -89,6 +89,9 @@ general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Si
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
 general.alert.success = Erfolg!
+general.confirmation.title = Sind Sie sicher?
+general.confirmation.yes = Ja
+general.confirmation.no = Nein
 
 moderator.email = E-Mail
 moderator.name = Nutzername
@@ -111,7 +114,7 @@ application.decline.success = Der Accountantrag von {0} wurde abgelehnt.
 accounts.title = Systemaccounts
 accounts.info = Auf dieser Seite sind alle Moderatorenaccounts des Systems aufgelistet. Sie sind absteigend nach \
   Nachnamen sortiert. Sie können einen Moderatorenaccount sperren oder löschen indem Sie auf den entsprechenden \
-  Button klicken.
+  Button klicken. Gelöschte Accounts können nicht wiederhergestellt werden.
 accounts.list.heading = Accounts
 accounts.lock= Sperren
 accounts.delete = Löschen
