Completed password reset functionality. Added the error handling case of email failure to the reset password action.  Modified the passwordReset.jsp. Added a general connection failure error handling in the frontController. However, this just forwards to a simple view at the moment (connectionFailure.jsp). Added connection failure handling to register action. Enables to remain on register page while keeping all entered form data. For this purpose, added the CONNECTION_FAILURE and CONNECTION_FAILURE_STATUS constants. Mapping connection failures to this status in the API methods. Added response code status field to APIException, so that the returned response code of a request can also be passed to the action objects.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -38,6 +38,10 @@ resetPassword.description = Wenn Sie Ihr Passwort vergessen haben können Sie es 
   das zurückgesetzte Passwort sobald wie möglich.
 resetPassword.resetButton.label = Passwort zurücksetzen
 resetPassword.failure.accountNotFound = Es ist kein Account diesem Nutzernamen zugeordnet.
+resetPassword.form.label.name.desc = Nutzernamen eingeben
+resetPassword.info.success = Passwort erfolgreich zurückgesetzt. Ihr neues Passwort wurde per Mail versandt.
+resetPassword.info.failure = Passwort konnte nicht zurückgesetzt werden.
+resetPassword.failure.emailFailure = Email konnte nicht an die hinterlegte Adresse versandt werden.
 
 register.info.success = Account erfolgreich angelegt.
 register.heading = Erstelle Moderatorenaccount
@@ -80,7 +84,11 @@ register.form.validationError.invalidMotivation = Die eingegebene Motivation ist
   dass Ihre Eingabe nicht mehr als 300 Zeichen umfasst.
 register.form.validationError.missingMotivation = Bitte geben Sie Ihre Motivation an.
 register.form.validationError.general.rejected = Abgelehnt vom Server. Bitte prüfen Sie Ihre Eingabe nochmals.
+register.info.connectionFailure = Der Account konnte nicht angelegt werden, da der Server nicht erreicht werden \
+  konnte. Der Server ist möglicherweise gerade offline. Bitte versuchen Sie es später nochmals.
 
+general.message.error.connectionFailure = Die Anfrage ist fehlgeschlagen, da der Server nicht erreicht werden konnte.\
+   Bitte versuchen Sie es später nochmal.
 general.message.error.failed = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.sessionExpired = Ihre Session ist aufgrund langer Inaktivität abgelaufen. Bitte melden Sie sich \
   neu an.
@@ -88,7 +96,8 @@ general.message.error.requiresLogin = Sie müssen sich anmelden, um die gewünscht
 general.message.error.fatal = Die Anfrage ist fehlgeschlagen. Bitte versuchen Sie es erneut.
 general.message.error.notFound = Die angegebene Ressource konnte nicht gefunden werden.
 general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion durchzuführen.
-general.alert.success = Erfolg!
+general.alert.success = Erfolgreich!
+general.alert.failure = Fehlgeschlagen!
 general.confirmation.title = Sind Sie sicher?
 general.confirmation.yes = Ja
 general.confirmation.no = Nein
