Confirmation on delete implemented without bootstrap-confirmation to accounts page. bootstrap-confirmation library deleted.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -99,11 +99,12 @@ general.message.error.forbidden = Sie habe nicht die Berechtigung diese Aktion d
 general.alert.success = Erfolgreich!
 general.alert.failure = Fehlgeschlagen!
 general.confirmation.title = Sind Sie sicher?
-general.confirmation.yes = Ja
-general.confirmation.no = Nein
+general.yes = Ja
+general.no = Nein
 
 moderator.email = E-Mail
 moderator.name = Nutzername
+moderator.isAdmin = Administratorenrechte
 moderator.motivation = Motivation
 moderator.notfound = Die angegebene Moderator-Ressource konnte nicht gefunden werden.
 
@@ -124,6 +125,7 @@ accounts.title = Systemaccounts
 accounts.info = Auf dieser Seite sind alle Moderatorenaccounts des Systems aufgelistet. Sie sind absteigend nach \
   Nachnamen sortiert. Sie können einen Moderatorenaccount sperren oder löschen indem Sie auf den entsprechenden \
   Button klicken. Gelöschte Accounts können nicht wiederhergestellt werden.
+accounts.warning.delete = Gelöschte Accounts können nicht wiederhergestellt werden!
 accounts.list.heading = Accounts
 accounts.lock= Sperren
 accounts.delete = Löschen
