Confirmation on decline added to applications page.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -120,6 +120,7 @@ application.nodata.info = Momentan gibt es keine offenen Accountanträge.
 application.none = Keine
 application.accept.success = Der Accountantrag von {0} wurde akzeptiert.
 application.decline.success = Der Accountantrag von {0} wurde abgelehnt.
+application.warning.decline = Wenn Sie den Antrag ablehnen wird er gelöscht. Er kann nicht wiederhergestellt werden!
 
 accounts.title = Systemaccounts
 accounts.info = Auf dieser Seite sind alle Moderatorenaccounts des Systems aufgelistet. Sie sind absteigend nach \
