Added the ChannelAPI class. Added UTF-8 encoding in methods returning the server's responses. Implemented LoadMyChannelsAction and provided myChannels page. Implemented logic to load channels that are managed by the logged in moderator. Modified Channel and Lecture calls to provide localized strings for channel type and faculty. Slightly modified header.jsp to hide "Logged in as ..." statement when viewport is too small.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -135,3 +135,41 @@ accounts.nodata.info = Es gibt keine Moderatorenaccounts im System.
 accounts.none = Keine
 accounts.lock.success = Der Account von {0} wurde gesperrt.
 accounts.delete.success = Der Account von {0} wurde gelöscht.
+
+myChannels.title = Meine Kanäle
+myChannels.info = Auf dieser Seite sind alle Kanäle aufgelistet, für die Sie verantwortlich sind. Sie können die \
+  Kanaldaten einsehen und ändern. Sie können zudem andere Moderatoren als Verantwortliche von einem Kanal hinzufügen \
+  oder entfernen.
+myChannels.list.heading = Kanäle
+myChannels.none = Keine
+myChannels.nodata = Keine Kanäle gefunden
+myChannels.nodata.into = Sie sind aktuell für keinen Kanal als Verantwortlicher eingetragen.
+myChannel.panel.channelType = Kanaltyp
+myChannel.panel.term = Semester
+myChannel.panel.locations = Orte
+myChannel.panel.dates = Termine
+myChannel.panel.contactInformation = Kontakt
+myChannel.panel.website = Webseite
+myChannel.panel.creationDate = Erstellungsdatum
+myChannel.panel.modificationDate = Änderungsdatum
+myChannel.panel.description = Beschreibung
+myChannel.panel.lecture.lecturer = Dozent
+myChannel.panel.lecture.assistant = Übungsleiter/Assistenten
+myChannel.panel.lecture.startDate = Vorlesungsbeginn
+myChannel.panel.lecture.endDate = Vorlesungsende
+myChannel.panel.lecture.faculty = Fakultät
+myChannel.panel.event.cost = Eintritt
+myChannel.panel.event.organizer = Veranstalter
+myChannel.panel.sports.cost = Kosten
+myChannel.panel.sports.numberOfParticipants = Anzahl Teilnehmer
+
+general.faculty.computerScienceAndEngineering = Fakultät für Ingenierwissenschaften, Informatik und Psychologie
+general.faculty.mathematicsAndEconomics = Fakultät für Mathematik und Wirtschaftswissenschaften
+general.faculty.medicines = Medizinische Fakultät
+general.faculty.naturalSciences = Fakultät für Naturwissenschaften
+
+general.channelType.lecture = Vorlesung
+general.channelType.event = Veranstaltung
+general.channelType.sports = Sportgruppe
+general.channelType.other = Andere
+general.channelType.studentGroup = Studentengruppe
