Add and remove admin rights implemented on applications page. Header updated to show missing navi links if not logged in as administrator.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -135,6 +135,10 @@ accounts.nodata.info = Es gibt keine Moderatorenaccounts im System.
 accounts.none = Keine
 accounts.lock.success = Der Account von {0} wurde gesperrt.
 accounts.delete.success = Der Account von {0} wurde gelöscht.
+accounts.adminRights.add = Administratorenrechte hinzufügen
+accounts.adminRights.remove = Administratorenrechte entfernen
+accounts.adminRights.add.success = Dem Account von {0} wurden Administratorenrechte hinzugefügt.
+accounts.adminRights.remove.success = Dem Account von {0} wurden die Administratorenrechte entzogen.
 
 myChannels.title = Meine Kanäle
 myChannels.info = Auf dieser Seite sind alle Kanäle aufgelistet, für die Sie verantwortlich sind. Sie können die \
