Groups page added. GroupAPI, GroupUtil and (modified) Group data class and GroupType created. Actions created. Texts updated.

--- a/resources/text_de.properties
+++ b/resources/text_de.properties
@@ -101,6 +101,10 @@ general.alert.failure = Fehlgeschlagen!
 general.confirmation.title = Sind Sie sicher?
 general.yes = Ja
 general.no = Nein
+general.term = Semester
+general.creationDate = Erstellungsdatum
+general.modificationDate = Änderungsdatum
+general.description = Beschreibung
 
 moderator.email = E-Mail
 moderator.name = Nutzername
@@ -117,7 +121,7 @@ application.accept = Annehmen
 application.decline = Ablehnen
 application.nodata = Keine Anträge gefunden
 application.nodata.info = Momentan gibt es keine offenen Accountanträge.
-application.none = Keine
+general.none = Keine
 application.accept.success = Der Accountantrag von {0} wurde akzeptiert.
 application.decline.success = Der Accountantrag von {0} wurde abgelehnt.
 application.warning.decline = Wenn Sie den Antrag ablehnen wird er gelöscht. Er kann nicht wiederhergestellt werden!
@@ -129,7 +133,7 @@ accounts.info = Auf dieser Seite sind alle Moderatorenaccounts des Systems aufge
 accounts.warning.delete = Gelöschte Accounts können nicht wiederhergestellt werden!
 accounts.list.heading = Accounts
 accounts.lock= Sperren
-accounts.delete = Löschen
+general.delete = Löschen
 accounts.nodata = Keine Accounts gefunden
 accounts.nodata.info = Es gibt keine Moderatorenaccounts im System.
 accounts.none = Keine
@@ -149,14 +153,10 @@ myChannels.none = Keine
 myChannels.nodata = Keine Kanäle gefunden
 myChannels.nodata.into = Sie sind aktuell für keinen Kanal als Verantwortlicher eingetragen.
 myChannel.panel.channelType = Kanaltyp
-myChannel.panel.term = Semester
 myChannel.panel.locations = Orte
 myChannel.panel.dates = Termine
 myChannel.panel.contactInformation = Kontakt
 myChannel.panel.website = Webseite
-myChannel.panel.creationDate = Erstellungsdatum
-myChannel.panel.modificationDate = Änderungsdatum
-myChannel.panel.description = Beschreibung
 myChannel.panel.lecture.lecturer = Dozent
 myChannel.panel.lecture.assistant = Übungsleiter/Assistenten
 myChannel.panel.lecture.startDate = Vorlesungsbeginn
@@ -177,3 +177,19 @@ general.channelType.event = Veranstaltung
 general.channelType.sports = Sportgruppe
 general.channelType.other = Andere
 general.channelType.studentGroup = Studentengruppe
+
+groups.title = Gruppen
+groups.info = Auf dieser Seite sind alle Gruppen des Systems aufgelistet. Die Gruppen sind absteigend nach \
+  Gruppenname sortiert. Sie können die Gruppendaten einsehen. Außerdem haben Sie die Möglichkeit Gruppen zu löschen \
+  wenn dafür ein hinreichender Grund vorliegt.
+groups.warning.delete = Gelöschte Gruppen können nicht wiederhergestellt werden!
+groups.list.heading = Gruppen
+groups.nodata = Keine Gruppen gefunden
+groups.nodata.info = Es gibt keine Gruppen im System.
+groups.delete.success = Die Gruppe {0} wurde gelöscht.
+
+group.type = Gruppentyp
+group.type.tutorial = Tutorium
+group.type.working = Arbeitsgruppe
+group.admin = Gruppenadministrator
+group.notfound = Die angegebene Gruppe konnte nicht gefunden werden.
